Examples modified after TableBundle modifications

--- a/Resources/views/Contact/list.html.twig
+++ b/Resources/views/Contact/list.html.twig
@@ -2,25 +2,17 @@
 
 {% block body %}
 
-    <div class="panel panel-info">        
-        <div class="panel-heading">        
-            <div class="panel-title">
-                {# insert pagination here #}
-                {% include "KilikTableBundle::_pagination.html.twig" %}
-                <b>Contacts list</b>
-                <div class="navbar navbar-right">
-                    <a href="{{ path("tabledemo_index") }}"><span class="glyphicon glyphicon-home"></span> return to examples list</a>
-                </div>
+    {% embed "KilikTableBundle::_defaultTable.html.twig" with {"table": table} %}
+        {% block tableTitle %}
+            <b>Contacts list</b>
+            <div class="navbar navbar-right">
+                <a href="{{ path("tabledemo_index") }}"><span class="glyphicon glyphicon-home"></span> return to examples list</a>
             </div>
-        </div>        
-        <div class="panel-body">        
-            {# list and search form #}
-            {% include "KilikTableBundle::_defaultTable.html.twig" %}
-
-        </div>        
-    </div>        
+        {% endblock tableTitle %}
+    {% endembed %}
 
 {% endblock body %}
+
 
 {% block javascript %}
     <script type="text/javascript">
