new demo: custom filters, custom view with adding columns

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -14,6 +14,7 @@
                 <li><a href="{{ path("organisation_list") }}">Organisations list (simple)</a></li>
                 <li><a href="{{ path("contact_list") }}">Contacts list (leftJoin)</a></li>
                 <li><a href="{{ path("organisation_groupby_list") }}">Organisations list with COUNT (Group-By example)</a></li>
+                <li><a href="{{ path("organisation_custom_list") }}">Organisations with stock informations (custom form filters)</a></li>
             </ul>
             <h2>Sources</h2>
             <ul>
