new example using alternative default template

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -15,7 +15,7 @@
                 <li><a href="{{ path("contact_list") }}">Contacts list (leftJoin)</a></li>
                 <li><a href="{{ path("organisation_groupby_list") }}">Organisations list with COUNT (Group-By example)</a></li>
                 <li><a href="{{ path("organisation_custom_list") }}">Organisations with stock informations (custom form filters)</a></li>
-                <li><a href="{{ path("product_list") }}">Product list (leftJoin)</a></li>
+                <li><a href="{{ path("product_list") }}">Product list (leftJoin with alternative pagination)</a></li>
             </ul>
             <h2>Sources</h2>
             <ul>
