--- a/Resources/views/Product/list.html.twig
+++ b/Resources/views/Product/list.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    {% embed "KilikTableBundle::_defaultTable.html.twig" with {"table": table} %}
+    {% embed "KilikTableBundle::_defaultTableAlt.html.twig" with {"table": table} %}
         {% block tableTitle %}
             <b>Products list</b>
             <div class="navbar navbar-right">
