modified example to use custom templateParams passed to the template, from the controller

--- a/Resources/views/Product/list.html.twig
+++ b/Resources/views/Product/list.html.twig
@@ -4,7 +4,7 @@
 
     <a href="{{ path("tabledemo_index") }}"><span class="glyphicon glyphicon-home"></span> return to examples list</a>
 
-    {% embed "KilikTableBundle::_defaultTableAlt.html.twig" with {"table": table} %}
+    {% embed "KilikTableDemoBundle:Product:_list.html.twig" with {"table": table} %}
         {% block tableTitle %}
             <b>Products list</b>
             <div class="navbar navbar-right">
