--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>       
         <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="/bundles/kiliktable/js/KilikTable.js"></script>
+        <script type="text/javascript" src="{{ asset('/bundles/kiliktable/js/KilikTable.js') }}"></script>
     </head>
     <body>
         {% block body %}
