concat example added

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
             <h2>Examples</h2>
             <ul>
                 <li><a href="{{ path("organisation_list") }}">Organisations list (simple)</a></li>
-                <li><a href="{{ path("contact_list") }}">Contacts list (leftJoin)</a></li>
+                <li><a href="{{ path("contact_list") }}">Contacts list (leftJoin, concat)</a></li>
                 <li><a href="{{ path("organisation_groupby_list") }}">Organisations list with COUNT (Group-By example)</a></li>
                 <li><a href="{{ path("organisation_custom_list") }}">Organisations with stock informations (custom form filters)</a></li>
                 <li><a href="{{ path("product_list") }}">Product list (leftJoin with alternative pagination)</a></li>
