--- a/Resources/views/Organisation/_listCustom.html.twig
+++ b/Resources/views/Organisation/_listCustom.html.twig
@@ -26,6 +26,10 @@
                 Startup ?
                 {{ form_widget(table.formView.startup,{"attr": {"class": "refreshOnChange"} }) }}
             </div>        
+            <div class="col-lg-12 col-md-6">
+                Not in city:
+                {{ form_widget(table.formView.notName,{"attr": {"class": "refreshOnKeyup"} }) }}
+            </div>        
         </div>        
     </div>        
 {% endblock tableBeforePanel %}
