basic project files

--- a/src/Kilik/TableDemoBundle/Resources/views/Default/index.html.twig
+++ b/src/Kilik/TableDemoBundle/Resources/views/Default/index.html.twig
@@ -20,7 +20,7 @@
             <h2>Sources</h2>
             <ul>
                 <li><a href="https://github.com/KilikFr/TableBundle">Kilik/TableBundle</a></li>
-                <li><a href="https://github.com/KilikFr/TableDemoBundle">Kilik/TableDemoBundle</a></li>
+                <li><a href="https://github.com/KilikFr/TableDemo">Kilik/TableDemo</a></li>
             </ul>
         </div>
     </div>
