A first working example of API call with Kilik Table

--- a/src/Kilik/TableDemoBundle/Resources/views/Default/index.html.twig
+++ b/src/Kilik/TableDemoBundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,7 @@
                 <h1>Welcome on Kilik/TableDemoBundle</h1>
             </div>
         </div>
-        <div class="panel-body">            
+        <div class="panel-body">
             <h2>Examples</h2>
             <ul>
                 <li><a href="{{ path("organisation_list") }}">Organisations list (simple)</a></li>
@@ -16,6 +16,7 @@
                 <li><a href="{{ path("organisation_groupby_list") }}">Organisations list with COUNT (Group-By example)</a></li>
                 <li><a href="{{ path("organisation_custom_list") }}">Organisations with stock informations (custom form filters)</a></li>
                 <li><a href="{{ path("product_list") }}">Product list (leftJoin with alternative pagination)</a></li>
+                <li><a href="{{ path("api_user_list") }}">Via API calls list</a></li>
             </ul>
             <h2>Sources</h2>
             <ul>
