--- a/src/Kilik/TableDemoBundle/Resources/views/ApiDemo/list.html.twig
+++ b/src/Kilik/TableDemoBundle/Resources/views/ApiDemo/list.html.twig
@@ -4,19 +4,29 @@
     <section class="container">
         <div class="row">
             <div class="sm-12">
-                {% embed "KilikTableDemoBundle:Product:_list.html.twig" with {"table": table} %}
+                {% embed "KilikTableDemoBundle:ApiDemo:_list.html.twig" with {"table": table} %}
                     {% block tableTitle %}
-                        <b>Products list</b>
+                        <b>User (via API) list</b>
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="{{ path("tabledemo_index") }}"><span class="glyphicon glyphicon-home"></span> return to examples list</a></li>
                             <li><a href="#" class="refreshOnClick"><span class="glyphicon glyphicon-refresh"></span> Refresh</a></li>
-                            <li><a href="#" id="btnExportCsv"><span class="glyphicon glyphicon-floppy-save"></span> Export as CSV</a></li>
                         </ul>
                     {% endblock tableTitle %}
                 {% endembed %}
             </div>
         </div>
+
+        <div class="row">
+            <div class="sm-12">
+                <br/>
+                <div class="alert alert-danger">
+                    Warning the demo api used (https://reqres.in/) doesn't handle filtering, sorting, or pagination.<br/>
+                    It's the reason why you can't navigate between pages.
+                </div>
+            </div>
+        </div>
     </section>
+
 {% endblock body %}
 
 {% block javascript %}
@@ -25,15 +35,6 @@
             var table = new KilikTable("{{ table.id }}", "{{ table.path }}", JSON.parse('{{ table.options | json_encode |raw }}'));
 
             table.init();
-            // callback after list reload
-            table.afterReload = function () {
-                console.log("test callback");
-            }
-
-            // bouton export
-            $("#btnExportCsv").click(function () {
-                $("form[name=" + table.getFormName() + "]").attr("action", "{{ path("product_list_export") }}").submit();
-            });
         });
     </script>
 
