--- a/src/Kilik/TableDemoBundle/Resources/views/Organisation/listCustom.html.twig
+++ b/src/Kilik/TableDemoBundle/Resources/views/Organisation/listCustom.html.twig
@@ -2,7 +2,13 @@
 
 {% block body %}
 
-    {% include "KilikTableDemoBundle:Organisation:_listCustom.html.twig" %}
+    <section class="container">
+        <div class="row">
+            <div class="sm-12">
+                {% include "KilikTableDemoBundle:Organisation:_listCustom.html.twig" %}
+            </div>
+        </div>
+    </section>
 
 {% endblock body %}
 
