migration of table demo to Symfony 3.4

--- a/src/Kilik/TableDemoBundle/Resources/views/ApiDemo/_list.html.twig
+++ b/src/Kilik/TableDemoBundle/Resources/views/ApiDemo/_list.html.twig
@@ -1,4 +1,4 @@
-{% extends "KilikTableBundle::_defaultTableAlt.html.twig" %}
+{% extends "@KilikTable/_defaultTableAlt.html.twig" %}
 
 {# add a column to the left #}
 {% block tableHeadStdColumns %}
