--- a/src/Kilik/TableDemoBundle/Resources/views/Organisation/_listCustom.html.twig
+++ b/src/Kilik/TableDemoBundle/Resources/views/Organisation/_listCustom.html.twig
@@ -1,4 +1,4 @@
-{% extends "KilikTableBundle::_defaultTable.html.twig" %}
+{% extends "@KilikTable/_defaultTable.html.twig" %}
 
 {% block tableTitle %}
     <b>Organisations with stock informations list</b>
