--- a/src/Kilik/TableDemoBundle/Resources/views/Organisation/list.html.twig
+++ b/src/Kilik/TableDemoBundle/Resources/views/Organisation/list.html.twig
@@ -1,10 +1,10 @@
-{% extends 'KilikTableDemoBundle::layout.html.twig' %}
+{% extends '@KilikTableDemo/layout.html.twig' %}
 
 {% block body %}
     <section class="container">
         <div class="row">
             <div class="sm-12">
-                {% embed "KilikTableBundle::_defaultTable.html.twig" with {"table": table} %}
+                {% embed "@KilikTable/_defaultTable.html.twig" with {"table": table} %}
                     {% block tableTitle %}
                         <b>Organisations list</b>
                         <div class="navbar navbar-right">
