--- a/src/Kilik/TableDemoBundle/Resources/views/Organisation/listCustom.html.twig
+++ b/src/Kilik/TableDemoBundle/Resources/views/Organisation/listCustom.html.twig
@@ -1,11 +1,11 @@
-{% extends 'KilikTableDemoBundle::layout.html.twig' %}
+{% extends '@KilikTableDemo/layout.html.twig' %}
 
 {% block body %}
 
     <section class="container">
         <div class="row">
             <div class="sm-12">
-                {% include "KilikTableDemoBundle:Organisation:_listCustom.html.twig" %}
+                {% include "@KilikTableDemo/Organisation/_listCustom.html.twig" %}
             </div>
         </div>
     </section>
