--- a/src/Kilik/TableDemoBundle/Resources/views/ApiDemo/list.html.twig
+++ b/src/Kilik/TableDemoBundle/Resources/views/ApiDemo/list.html.twig
@@ -1,10 +1,10 @@
-{% extends 'KilikTableDemoBundle::layout.html.twig' %}
+{% extends '@KilikTableDemo/layout.html.twig' %}
 
 {% block body %}
     <section class="container">
         <div class="row">
             <div class="sm-12">
-                {% embed "KilikTableDemoBundle:ApiDemo:_list.html.twig" with {"table": table} %}
+                {% embed "@KilikTableDemo/ApiDemo/_list.html.twig" with {"table": table} %}
                     {% block tableTitle %}
                         <b>User (via API) list</b>
                         <ul class="nav navbar-nav navbar-right">
